# architecture-quantum_forge_software

./: .dockerignore  .gitignore  .markdownlint.json  Dockerfile  Project_template.md  README.md  Task.md  app.py  docker-compose.yml  pyproject.toml  terms_map.json
assets/screenshots/: README.md
data/: terms_map.json
data/knowledge_base/en/: ashen-ledger.md  battle-of-ashmoor.md  brisa-aldwen.md  dolgan.md  glyphs.md  gravelurk.md  leaked-credentials-note.md  sauvterre.md  skyrender.md  sunwraith.md  thornblades.md  trial-of-ashes.md
data/knowledge_base/ru/: aerdmir.md  derrin.md  drennan.md  drevniy-krovnik.md  efir.md  eliksiry-pepelnyh-strazhey.md  mokrad.md  olvar.md  razlom-sfer.md  sevrin.md  shkola-rysi.md  silvani.md  stormholt.md  tinnik.md  vael-korhal.md  veymira-iz-halgara.md
docs/: task5_scenarios.md
knowledge_base/en/: azmar-var-ulreth.md  brennar.md  conclave-of-veils.md  groveshade.md  lirio.md  moonsteel-and-wardens-sigil.md  ulreth-imperium.md  varmun.md  veldoria.md
knowledge_base/ru/: aysa.md  korven-iz-draelya.md  proklyatitsa.md
scripts/: build_index.py  cli.py  prompts.py  rag_chain.py  rag_config.py  replace_terms.py  security.py  verify_terms.py
